docs/3.1/readme.md
| Name | Alias | Description |
| --- | --- | --- |
| [AddUNSystemTables](./AddUNSystemTables.html) | Create Utility Network System Tables Views | Generate views on the utility network system tables. |
| [AdjustDataSources](./AdjustDataSources.html) | Update Data Sources | Use this tool to convert the data source of layers in the maps in the current ArcGIS Pro project to a workspace. |
| [AssociationSelection](./AssociationSelection.html) | Select by Association | Expands the current selection in the map based on specified utility network association types and layers. |
| [BatchTrace](./BatchTrace.html) | Batch Trace | Iterate through the starting points to trace the utility network and use the results. |
| [BuildStartingPoints](./BuildStartingPoints.html) | Build Starting Points | Creates starting points based on a trace configuration. |
| [CalculateTolerances](./CalculateTolerances.html) | Calculate Tolerances and Resolutions | Calculate the XY, Z, and M tolerances based on a measure unit for systems that will use a linear referencing system (LRS). |
| [ChangeGDBSpatialReference](./ChangeGDBSpatialReference.html) | Change GDB Spatial Reference | Creates a new file geodatabase in the user-specified spatial reference. |
| [CompareConfigurations](./CompareConfigurations.html) | Asset Package Configuration Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package configuration options. |
| [CompareRenames](./CompareRenames.html) | Asset Package Rename Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package rename options. |
| [Config2Trace](./Config2Trace.html) | Trace Configurations to Files | Converts Trace Configurations to a series of files |
| [ConfigureUtilityNetworkLayers](./ConfigureUtilityNetworkLayers.html) | Configure UN Layers | Configures utility network layers by modifying popups and display filters. |
| [ContingentValueWorkbookToCSV](./ContingentValueWorkbookToCSV.html) | Convert Contingent Values Workbook | Converts a Contingent Values Workbook to CSV files to be used for importing. |
| [CreateAssociationLines](./CreateAssociationLines.html) | Create Association Lines | Creates lines representing utility network associations. |
| [CreateContingentValueAttributeRules](./CreateContingentValueAttributeRules.html) | Contingent Values to Attribute Rules | Create a series of attribute rules from the Contingent Values. |
| [CreateContingentValues](./CreateContingentValues.html) | Create Contingent Values | Creates contingent values from schema or data. |
| [CreateContingentValuesWorkbook](./CreateContingentValuesWorkbook.html) | Create Contingent Values Workbook | Creates an excel workbook to review and modify contingent values defined by data, schema or existing values. |
| [CreateQuadTrees](./CreateQuadTrees.html) | Create Quadtrees | Creates quadtrees from a collection of input features. |
| [CreateUNTerminalContingentValues](./CreateUNTerminalContingentValues.html) | Create Terminal Contingent Values | Creates contingent values for Utility Network terminal fields. |
| [EnableLRSUPDM](./EnableLRSUPDM.html) | Enable APR on UPDM | Creates the script to enable LRS or enables LRS on a UPDM database with a utility network. |
| [EvaluateRulesByPolygon](./EvaluateRulesByPolygon.html) | Evaluate Rules by Polygon | Runs the Evaluate Rules Geoprocessing tool for every input polygon. |
| [ExportReportingData](./ExportReportingData.html) | Export Reporting Data | Exports tables with domain descriptions to an output geodatabase. |
| [ExportUtilityNetworkMatrix](./ExportUtilityNetworkMatrix.html) | Export Matrix | Creates Excel workbooks for visualizing and modifying Utility Network rules, categories, association roles, and terminal assignments. |
| [ExtractFileLogs](./ExtractFileLogs.html) | Extract Logs from Files | Generates a Mobile GDB with a record for each entry in a log file. |
| [ExtractRESTLogs](./ExtractRESTLogs.html) | Extract Logs from REST | Extracts logs from ArcGIS Server. |
| [FilterMap](./FilterMap.html) | Modify Map by Rename and Configure | Applies rename and configuration options to maps based on an asset package. |
| [ImportUtilityNetworkMatrix](./ImportUtilityNetworkMatrix.html) | Import Matrix | Loads the values from the rule, network category, and terminal assignment workbooks. |
| [MapLayersToCSV](./MapLayersToCSV.html) | Map Layers to CSV | Use this tool to create a csv report with field information from your tables and layers. |
| [SubnetworkAggregator](./SubnetworkAggregator.html) | Subnetwork Aggregator | This tools generates aggregated geometry and asset summaries for the subnetworks in an utility network.  This can be used to generated subnetwork geometry for subnetworks who currently have error rows. The results will include the currently connected features up to the location where errors are present. |
| [SummarizeAttributeRules](./SummarizeAttributeRules.html) | Report and Summarize Attribute Rules | Generates a Mobile GDB that has a report of all the attribute rules in the workspace. |
| [SummarizeUNErrors](./SummarizeUNErrors.html) | Summarize Utility Network Errors | Generates a Mobile GDB summarizing utility network errors and data inconsistencies |
| [SummaryByBits](./SummaryByBits.html) | Summary by Bits | Splits the specified attributes by the specified bits present and generates data for reporting. |
| [SwapBits](./SwapBits.html) | Swap Bits | Evaluates the values of an integer field as a bit gate and swaps bit values. |
| [SyncAssetPackageDataTables](./SyncAssetPackageDataTables.html) | Sync the C Tables Asset Group/Type | Sync the Asset Group and Asset Type of the Asset Package data tables to the domain tables. |
| [Trace2Config](./Trace2Config.html) | Trace to Trace Configurations | Converts arcpy.un.Trace to arcpy.un.ImportTraceConfigurations |
| [TraceFilesToGeodatabase](./TraceFilesToGeodatabase.html) | Trace Files To Geodatabase | Converts the JSON files from a Utility Network trace to a geodatabase. |
| [TransferUtilityNetworkData](./TransferUtilityNetworkData.html) | Transfer Utility Network Data | Merge the data from one or more asset packages to an asset package or utility network. |
| [ValidateByPolygon](./ValidateByPolygon.html) | Validate by Polygon | Runs the Validate Network Topology Geoprocessing tool for every input polygon. |

`Last built 2023-11-27 for 3.1.2`
